--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -61,7 +61,7 @@
 .about-church {
     display: flex;
     width: 100vw;
-    height: 50vh;
+    height: 70vh;
     background-color: #ffffff;
     flex-direction: column;
     justify-content: center;
@@ -69,9 +69,12 @@
     text-align: center;
 
     .pastor-contact {
+        margin-top: 20px;
         display: flex;
-        justify-content: space-around;
-        width: 50vw;
+        justify-content: space-evenly;
+        width: 100vw;
+        align-items: center;
+        gap: 10px;
     }
 }
 
@@ -114,6 +117,10 @@
 
     .third-img {
         animation-delay: 6s;
+    }
+
+    .pastor-contact {
+        flex-direction: column;
     }
 
     /* Keyframes for slideshow effect */
